--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body {
     align-items: center;
 }
 .square {
-    border: 1px solid white;
+    /* border: 1px solid white; */
     width: 100%;
     height: 100%;
     cursor: pointer; /* Shows a hand cursor when hovered */
     transition: background-color 0.2s; /* Smooth color transition */
 }
+
+
 
